@@ -1,3 +1,10 @@
+2009-11-05  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
+
+ * src/plugindata.h, HACKING:
+   Deprecate PLUGIN_KEY_GROUP() macro - use plugin_set_key_group()
+   instead.
+
+
 2009-11-04  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
 
  * tagmanager/makefile.win32:
